k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - protocol: TCP
      name: my-app
      port: 80
      nodePort: 31080
