k8s/app-networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-app
  namespace: my-app
spec:
  podSelector:
    matchLabels:
      app: my-app
  ingress:
  - {}
